# miniover

./: .gitignore  Cargo.toml  README.md  auth.rs  build.rs  creds.rs  main.rs  messages.rs  miniover-manifest.rc  miniover.service  toast.rs  tray.rs  types.rs  utils.rs
