[package]
name = "miniover"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.20.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tokio = { version = "1.44.2", features = ["full"] }
auto-launch = "0.5.0"
ftail = "0.2.1"
tauri-winrt-notification = "0.7.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.26"
anyhow = "1.0.97"
native-tls = "0.2.11"
dirs = "5.0.1"
futures-util = "0.3.30"
open = "5.0.1"
native-windows-gui = "1.0.13"

[build-dependencies]
embed-resource = "3.0.2"

[[bin]]
name = "miniover"
path = "main.rs"