[package]
name = "miniover"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio = { version = "1.46.1", features = ["full"] }
auto-launch = "0.5.0"
ftail = "0.3.0"
tauri-winrt-notification = "0.7.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
anyhow = "1.0.98"
native-tls = "0.2.14"
dirs = "6.0.0"
futures-util = "0.3.31"
open = "5.3.2"
native-windows-gui = "1.0.13"
tray-item = "0.10.0"

[build-dependencies]
embed-resource = "3.0.2"

[[bin]]
name = "miniover"
path = "main.rs"